# musical-barnacle

./: .eslintrc.js  .gitignore  .mocharc.js  README.md  TODO  appdata.yaml  graphql-codegen.yml  index.html  package.json  release.config.js  svelte.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: App.svelte  AppConfiguration.svelte  AppEventsLog.svelte  AppInfo.svelte  ConfigFileEditor.svelte  ConfigFilePath.svelte  ConfigFilesTreeview.svelte  ConflictResolutionScreen.svelte  Counter.svelte  Input.svelte  Input.types.ts  IpFilteringOptionSelect.svelte  LabelSpan.svelte  Link.svelte  Route.svelte  core-types.ts  core.ts  index.css  main.ts  router.ts  texts.ts  utility-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
test/: fixtures.ts  mocha-hooks.ts  setup.ts
test/examples/example-directory-1/Portal eRejestracja/: appsettings.json
test/examples/example-directory-1/mMDAB/: appsettings.json
test/examples/example-directory-1/mMWS/: appsettings.json
test/examples/example-directory-1/nested-dir/nested-dir/: appsettings.json
test/examples/example-directory-1/test-new/: appsettings.json
